--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "next": "12.3.0",
+    "pokenode-ts": "^1.17.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
