--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "clsx": "^1.2.1",
     "next": "12.3.0",
     "pokenode-ts": "^1.17.0",
     "react": "18.2.0",
