--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@prisma/client": "^4.3.1",
     "clsx": "^1.2.1",
     "next": "12.3.0",
     "pokenode-ts": "^1.17.0",
@@ -31,6 +32,7 @@
     "jest-environment-jsdom": "^29.0.3",
     "postcss": "^8.4.16",
     "prettier": "2.7.1",
+    "prisma": "^4.3.1",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
   }
