--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "@prisma/client": "^4.3.1",
     "clsx": "^1.2.1",
-    "next": "12.3.0",
+    "next": "~13.0.0",
     "pokenode-ts": "^1.17.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "~18.2.0",
+    "react-dom": "~18.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -27,7 +27,7 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.11",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0",
+    "eslint-config-next": "~13.0.0",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
     "postcss": "^8.4.16",
